--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,18 @@ body {
   margin: 0;
   font-size: 16px;
 }
+
+.svg-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  vertical-align: top;
+  overflow: hidden;
+}
+.svg-content {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
